--- a/src/app/pages/ver-mascotas-perdidas/ver-mascotas-perdidas.component.html
+++ b/src/app/pages/ver-mascotas-perdidas/ver-mascotas-perdidas.component.html
@@ -3,7 +3,7 @@
 </div>
   <div class="container">
     <h1 class="text-center d-flex justify-content-center align-items-center" style="color: rgb(255,126,183);display: none;position: relative;font-weight: bold;text-align: center;margin-top: 15px;">
-        Animales en adopcion
+        Animales perdidos
     </h1>
   </div>
   <div class="container">
