--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="text-center" style="background: #f9f9fc;">
+<footer class="text-center sticky-footer" style="background: #f9f9fc;">
     <div class="container text-muted py-4 py-lg-5">
         <ul class="list-inline">
             <li class="list-inline-item me-4"><a class="link-secondary" href="#" style="color: rgb(255,194,221);"><span style="color: rgb(150, 167, 251);">Turnos </span><span style="color: rgb(150, 167, 251);">Adopcion</span></a></li>
