--- a/src/app/pages/graficos/graficos.component.html
+++ b/src/app/pages/graficos/graficos.component.html
@@ -1,11 +1,40 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-xl-12 text-center mb-3">
+        <div class="col-xl-12 text-center mb-3" style="margin-top: 30px;">
             <h3><strong><span style="color: rgb(255, 126, 183);">Donaciones</span></strong></h3>
         </div>
         <div class="col-lg-6">
-            <canvas id="piechart"></canvas>
+            <div class="chart-container">
+                <canvas id="piechart"></canvas>
+            </div>
         </div>
     </div>
 </div>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xl-12 text-center mb-3" style="margin-top: 30px;">
+            <h3><strong><span style="color: rgb(255, 126, 183);">Publicaciones por tipo Animal</span></strong></h3>
+        </div>
+        <div class="col-lg-6">
+            <div class="chart-container">
+                <canvas id="publicacionesChart"></canvas>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid" style="margin-bottom: 30px;">
+    <div class="row">
+        <div class="col-xl-12 text-center mb-3" style="margin-top: 30px;">
+            <h3><strong><span style="color: rgb(255, 126, 183);">Publicaciones por estado</span></strong></h3>
+        </div>
+        <div class="col-lg-6">
+            <div class="chart-container">
+                <canvas id="publicacionesEstadoChart"></canvas>
+            </div>
+        </div>
+    </div>
+</div>
+
 
