--- a/src/app/layout/footer/footer.component.css
+++ b/src/app/layout/footer/footer.component.css
@@ -7,6 +7,12 @@
     padding-top: 1.5rem!important;
     padding-bottom: 1.5rem!important;
   }
+
+  .sticky-footer {
+    position: sticky;
+    bottom: 0;
+    width: 100%;
+}
   
   @media (min-width:768px) {
     .container, .container-md, .container-sm {
