--- a/src/app/pages/mi-refugio/mi-refugio.component.html
+++ b/src/app/pages/mi-refugio/mi-refugio.component.html
@@ -10,7 +10,7 @@
         </div>
         <div class="row justify-content-center" style="margin-right: 0px;margin-left: 0px;margin-top: 10px; margin-bottom: 30px;">
             <div class="col-sm-6 col-lg-4" style="padding-right: 0px;padding-left: 0px;">
-                <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/descarga.png">
+                <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" [src]="refugio.data.refugio_photo">
                     <div class="card-body info">
                         <div class="row" style="margin-top: -24px;">
                             <div class="col-md-12" style="margin-top: 22px;">
