--- a/src/app/pages/crear-publicacion/crear-publicacion.component.html
+++ b/src/app/pages/crear-publicacion/crear-publicacion.component.html
@@ -6,7 +6,11 @@
         <div class="card-body">
             <form [formGroup]="form">
                 <div class="row" style="margin-bottom: 25px;text-align: left;">
-                    <div class="col-sm-4 col-md-4 col-lg-3 col-xl-2 col-xxl-2" style="display: inline;text-align: center;margin-bottom: 25px;"><img class="rounded-circle mb-3 mt-4 img-fluid" src="assets/img/dogs/1683338381655.jpg" style="display: inline;max-height: 110px;"><br><button class="btn btn-primary btn-sm" id="photoBtn" type="button" style="background: linear-gradient(#b6c4ff, #ff7bef);color: rgb(0,0,0);border-bottom-style: none;border-bottom-color: rgba(255,126,183,0);">Cargar Foto</button></div>
+                    <input type="file" id="inputFile" style="display: none;" (change)="onFileSelected($event)">
+                    <div class="col-sm-4 col-md-4 col-lg-3 col-xl-2 col-xxl-2" style="display: inline;text-align: center;margin-bottom: 25px;">
+                        <img class="rounded-circle mb-3 mt-4 img-fluid" [src]="imageUrl" style="display: inline;max-height: 110px;"><br>
+                        <button class="btn btn-primary btn-sm" id="photoBtn" type="button" (click)="selectFile()">Subir foto</button>
+                    </div>
                     <div class="col-sm-8 col-md-8 col-lg-9 col-xl-10 col-xxl-10 align-self-center">
                         <div class="row">
                             <div class="col-md-12 text-start">
@@ -60,9 +64,6 @@
                     </div>
                     <div class="col-md-6">
                         <div class="mb-3"><label class="form-label" for="address"><strong>Fecha</strong></label></div><input formControlName="publicacion_fecha" class="form-control" type="" id="password-2" placeholder="AAAA-MM-DD">
-                    </div>
-                    <div class="col-md-6">
-                        <div class="mb-3"><label class="form-label" for="address"><strong>Foto</strong></label></div><input formControlName="publicacion_photo" class="form-control" type="" id="password-4" placeholder="">
                     </div>
                     <div class="col">
                         <p id="emailErrorMsg" class="text-danger" style="display:none;"></p>
