--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -20,6 +20,17 @@
                         <label class="form-label text-secondary">Contraseña</label>
                         <input formControlName="password" class="form-control" type="password" required>
                     </div>
+                    <div class="form-group form-check">
+                        <input
+                          class="form-check-input"
+                          type="checkbox"
+                          formControlName="aceptoTerminos"
+                          id="aceptoTerminos"
+                        />
+                        <label class="form-check-label" for="aceptoTerminos">
+                          Acepto los <a href="#" (click)="mostrarTerminos()" >términos y condiciones</a>
+                        </label>
+                      </div>
                     <button (click)="registro()" class="btn btn-info mt-2" type="submit" style="background: linear-gradient(#ff7eb7, #b6c4ff), rgb(255,126,183);border-style: none;">Registrarse</button>
                 </form>
                 
