--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,8 +1,8 @@
 <footer class="text-center sticky-footer" style="background: #f9f9fc;">
     <div class="container text-muted py-4 py-lg-5">
         <ul class="list-inline">
-            <li class="list-inline-item me-4"><a class="" href="#"><span style="color: rgb(150, 167, 251);">Preguntas Frecuentes</span></a></li>
-            <li class="list-inline-item me-4"><a class="" href="#"><span style="color: rgb(150, 167, 251);">Formulario de contacto</span></a></li>
+            <li class="list-inline-item me-4"><a routerLink="/faqs" class="" href="#"><span style="color: rgb(150, 167, 251);">Preguntas Frecuentes</span></a></li>
+            <li class="list-inline-item me-4"><a routerLink="/graficos-inicio" class="" href="#"><span style="color: rgb(150, 167, 251);">Graficos informativos</span></a></li>
         </ul>
         <ul class="list-inline">
             <li class="list-inline-item me-4"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-facebook">
