--- a/src/app/pages/grafico-publicaciones/grafico-publicaciones.component.html
+++ b/src/app/pages/grafico-publicaciones/grafico-publicaciones.component.html
@@ -10,8 +10,8 @@
                                     <div class="row h-100">
                                         <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-start align-items-md-center justify-content-xl-center">
                                             <div>
-                                                <h1 class="text-uppercase fw-bold text-white mb-3">cantidad de donaciones por refugio.</h1>
-                                                <p class="mb-4"><br><span style="color: rgb(255, 255, 255);">Este gráfico representa la distribución de donaciones realizadas en diferentes refugios en un período específico. Visualiza la contribución individual de los ciudadanos en el apoyo a causas de protección animal.</span></p>
+                                                <h1 class="text-uppercase fw-bold text-white mb-3">Cantidad de Publicaciones por Tipo de Animal</h1>
+                                                <p class="mb-4"><br><span style="color: rgb(255, 255, 255);">Este gráfico Muestra la cantidad de publicaciones clasificadas por tipo de animal. Explora cómo se distribuyen las publicaciones de adopción o ayuda para cada categoría de mascota.</span></p>
                                             </div>
                                         </div>
                                     </div>
@@ -39,7 +39,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <button class="btn" style="background-color:rgb(255,126,183) ;" (click)="obtenerDonacionesFecha()">Filtrar</button>
+                    <button class="btn" style="background-color:rgb(255,126,183) ;" (click)="obtenerPublicacionesFecha()">Filtrar</button>
                 </div>
             </div>
         </section>
@@ -54,5 +54,4 @@
     
     
 </div>
-
 
